# transmission-discord-bot

./: .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  .python-version  CHANGELOG.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: docker-publish-gpr.yml  docker-publish-hub.yml  publish.yml  release.yml
src/: main.py
src/extensions/: add.py  help.py  list.py  pause.py  remove.py  resume.py
src/utils/: env.py  logging.py  torrent_utils.py
